2003-04-23  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Generic-IBM-Comaptible_Dot_Matrix_Printer.xml,
	  printer/Generic-IBM-Compatible_Dot_Matrix_Printer.xml,
	  driver/ibmpro.xml, db/oldprinterids: Fixed typo in printer name
	  and ID.

	* opt/207.xml: Moved "Model" option of "pcl3" driver into
	  "Installable Options" group, as this has only be to set by the
	  admin and not by the user.

2003-04-22  Till Kamppeter <till.kamppeter@gmx.net>

	* README, USAGE: Updated for Foomatic 3.0.0rc2 (restrictions for
	  string and password options).

2003-04-17  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/lxm3200-tweaked.xml: Removed obsolete link.

2003-04-14  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/driver/bj8pa06n.upp.xml,
	  db/source/driver/bjc610a0.upp.xml,
	  db/source/driver/epl5700l.xml, db/source/driver/epl5800l.xml,
	  db/source/driver/epl5900l.xml, db/source/driver/pnm2ppa.xml,
	  db/source/driver/pxlmono.xml, db/source/driver/st640ih.upp.xml,
	  db/source/driver/stc2.upp.xml, db/source/driver/stc300.upp.xml,
	  db/source/driver/stc.upp.xml: Removed the "*Resolution ..."
	  lines from the <ppdentry>s, the "*DefaultResolution: ..." is
	  enough to tell to a client application what the printer's
	  resolution is (Adobe PPD spec 4.3, section 5.9, p. 84, Note and
	  section 4.5, p. 40) and the "*Resolution ..." lines produce ugly
	  widgets with one choice in GUIs.

2003-04-13  Till Kamppeter <till.kamppeter@gmx.net>

	* README, USAGE: Updated for Foomatic 3.0.0rc1 (string, password,
	  and forced composite options).

2003-04-12  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Printrex-820_DL.xml: Fixed URL.

2003-04-10  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-CL_760.xml, printer/Epson-PM_740C.xml,
	  printer/Epson-PM_870C.xml, printer/Epson-PM_930C.xml,
	  printer/Epson-PM_3700C.xml: Added new japanese printer models.
	
2003-04-08  Till Kamppeter <till.kamppeter@gmx.net>
