@@ -22,16 +22,126 @@
 	    <ev_longname> <en>Upper or Only One InputSlot</en> </ev_longname>
 	    <ev_shortname> <en>Upper</en> </ev_shortname>
 	    <ev_driverval>1</ev_driverval>
+	    <constraints>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2200_DL</printer>
+		</constraint>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+	    </constraints>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-InputSlot-1-QMS">
+	    <ev_longname> <en>Multipurpose Tray</en> </ev_longname>
+	    <ev_shortname> <en>Multipurpose</en> </ev_shortname>
+	    <ev_driverval>1</ev_driverval>
+	    <constraints>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		</constraint>
+		<constraint sense="true">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2200_DL</printer>
+		</constraint>
+		<constraint sense="true">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+	    </constraints>
 	</enum_val>
 	<enum_val id="ev/foo2zjs-InputSlot-2">
 	    <ev_longname> <en>Lower Tray</en> </ev_longname>
 	    <ev_shortname> <en>Lower</en> </ev_shortname>
 	    <ev_driverval>2</ev_driverval>
+	    <constraints>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2200_DL</printer>
+		</constraint>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+	    </constraints>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-InputSlot-2-2200">
+	    <ev_longname> <en>Upper Tray</en> </ev_longname>
+	    <ev_shortname> <en>Upper</en> </ev_shortname>
+	    <ev_driverval>2</ev_driverval>
+	    <constraints>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		</constraint>
+		<constraint sense="true">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2200_DL</printer>
+		</constraint>
+	    </constraints>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-InputSlot-3">
+	    <ev_longname> <en>Middle Tray</en> </ev_longname>
+	    <ev_shortname> <en>Middle</en> </ev_shortname>
+	    <ev_driverval>3</ev_driverval>
+	    <constraints>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2200_DL</printer>
+		</constraint>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+	    </constraints>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-InputSlot-3-2300">
+	    <ev_longname> <en>Optional Lower Tray</en> </ev_longname>
+	    <ev_shortname> <en>Lower</en> </ev_shortname>
+	    <ev_driverval>3</ev_driverval>
+	    <constraints>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		</constraint>
+		<constraint sense="true">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+	    </constraints>
 	</enum_val>
 	<enum_val id="ev/foo2zjs-InputSlot-4">
 	    <ev_longname> <en>Manual Feed</en> </ev_longname>
 	    <ev_shortname> <en>Manual</en> </ev_shortname>
 	    <ev_driverval>4</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-InputSlot-5">
+	    <ev_longname> <en>Envelope</en> </ev_longname>
+	    <ev_shortname> <en>Envelope</en> </ev_shortname>
+	    <ev_driverval>5</ev_driverval>
+	    <constraints>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2200_DL</printer>
+		</constraint>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+	    </constraints>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-InputSlot-5-2200">
+	    <ev_longname> <en>Optional Lower Tray</en> </ev_longname>
+	    <ev_shortname> <en>Lower</en> </ev_shortname>
+	    <ev_driverval>5</ev_driverval>
+	    <constraints>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		</constraint>
+		<constraint sense="true">
+		    <driver>foo2zjs</driver>
+		    <printer>Minolta-magicolor_2200_DL</printer>
+		</constraint>
+	    </constraints>
 	</enum_val>
 	<enum_val id="ev/foo2zjs-InputSlot-7">
 	    <ev_longname> <en>Auto Source</en> </ev_longname>
