@@ -1,3 +1,9 @@
+2003-04-26  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* opt/foo2zjs-InputSlot.xml: Minolta/QMS magicolor 2200 and 2300
+	  have different codes for the input trays, fixed the option
+	  entry.
+
 2003-04-23  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Generic-IBM-Comaptible_Dot_Matrix_Printer.xml,
